Add Unlock Truth Packet button

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ document.getElementById("getVerdict").onclick = () => {
   alert("Teaser Verdict: PASS / FAIL (demo)");
 };
 </script>
+<button onclick="window.location.href='/verify/'" 
+style="margin-top:40px;padding:16px 28px;font-size:18px;font-weight:600;
+background:linear-gradient(90deg,#d4af37,#f5d76e);
+border:none;border-radius:8px;cursor:pointer;">
+Unlock Truth Packet
+</button>
 </body>
 </html>
 
