--- a/verify/index.html
+++ b/verify/index.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verify a Deal</title>
+  <title>Garnett Verify</title>
   <style>
     body {
-      background: #0a0a0a;
+      background: #000;
       color: #fff;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      font-family: Arial;
       text-align: center;
-      padding: 24px;
+      padding-top: 100px;
     }
-    .box {
-      max-width: 520px;
+    input, select, button {
+      padding: 10px;
+      margin: 10px;
+      width: 250px;
     }
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 16px;
-    }
-    p {
-      color: #9a9a9a;
-      line-height: 1.6;
+    .result {
+      margin-top: 30px;
+      font-size: 22px;
     }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h1>Verification is coming online.</h1>
-    <p>
-      Garnett Work is preparing its first verification lane.<br />
-      No hype. No guesses. Just market truth.
-    </p>
-  </div>
+
+<h1>Run Garnett</h1>
+
+<input id="listingUrl" placeholder="Listing URL"><br>
+<input id="buyPrice" placeholder="Buy Price"><br>
+
+<select id="condition">
+  <option>Used</option>
+  <option>New</option>
+</select><br>
+
+<button onclick="runTeaser()">Get Teaser Verdict</button>
+
+<div class="result" id="result"></div>
+
+<script>
+function runTeaser() {
+  const url = document.getElementById("listingUrl").value;
+  const price = document.getElementById("buyPrice").value;
+
+  if (!url || !price) {
+    alert("Enter listing URL and price.");
+    return;
+  }
+
+  const market = 910;
+  const margin = ((market - price) / price * 100).toFixed(1);
+
+  const verdict = margin > 10 ? "PASS" : "FAIL";
+
+  document.getElementById("result").innerHTML =
+    "Verdict: " + verdict +
+    "<br>Market: $" + market +
+    "<br>Margin: " + margin + "%";
+}
+</script>
+
 </body>
 </html>
 
