--- a/index.html
+++ b/index.html
@@ -5,94 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garnett Work | Verify with Confidence</title>
     <style>
-        :root { --gold: #D4AF37; --black: #0A0A0A; --white: #F5F5F5; --card-bg: #161616; --glow: rgba(212, 175, 55, 0.3); }
-        body { background: var(--black); color: var(--white); font-family: -apple-system, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
+        :root { --gold: #E2B04A; --black: #0A0A0A; --white: #FFFFFF; --card-bg: #141414; --glow: rgba(226, 176, 74, 0.2); }
+        body { background: var(--black); color: var(--white); font-family: -apple-system, sans-serif; margin: 0; padding: 0; line-height: 1.5; }
         
-        /* LOGO SECTION - TEXT REMOVED */
-        .brand-header { padding: 30px 5% 10px 5%; display: flex; align-items: center; gap: 15px; }
-        .logo-circle { width: 60px; height: 60px; background: var(--gold); border-radius: 50%; display: flex; align-items: center; justify-content: center; overflow: hidden; border: 2px solid #333; }
-        .logo-circle img { width: 100%; height: 100%; object-fit: cover; } 
+        nav { padding: 25px 8%; display: flex; justify-content: space-between; align-items: center; }
+        .pricing-link { color: var(--gold); text-decoration: none; font-weight: bold; border: 1px solid var(--gold); padding: 8px 20px; border-radius: 10px; font-size: 14px; }
 
-        nav { padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; }
-        .pricing-btn { border: 1px solid var(--gold); color: var(--gold); padding: 8px 20px; border-radius: 8px; text-decoration: none; font-weight: bold; transition: 0.3s; font-size: 14px; }
+        .hero { display: flex; flex-wrap: wrap; padding: 20px 8% 80px 8%; gap: 40px; align-items: center; position: relative; }
+        .hero-left { flex: 1.2; min-width: 320px; }
+        .hero-right { flex: 0.8; min-width: 350px; background: #1A1A1A; padding: 40px; border-radius: 24px; border: 1px solid #333; box-shadow: 0 30px 60px rgba(0,0,0,0.7); position: relative; z-index: 2; }
 
-        .hero { display: flex; flex-wrap: wrap; padding: 40px 5%; gap: 40px; align-items: flex-start; }
-        .hero-left { flex: 1; min-width: 300px; }
-        .hero-right { flex: 1; min-width: 350px; background: var(--card-bg); padding: 30px; border-radius: 24px; border: 1px solid #333; box-shadow: 0 20px 40px rgba(0,0,0,0.6); }
+        .badge { background: rgba(226, 176, 74, 0.1); color: var(--gold); padding: 6px 16px; border-radius: 20px; font-size: 11px; font-weight: 800; text-transform: uppercase; border: 1px solid var(--glow); margin-bottom: 25px; display: inline-block; }
+        h1 { font-size: 4.2rem; margin: 0; line-height: 1; font-weight: 800; letter-spacing: -2px; }
+        .desc { color: #888; font-size: 1.1rem; margin: 30px 0; max-width: 480px; }
 
-        .slogan-badge { background: rgba(212, 175, 55, 0.1); color: var(--gold); padding: 5px 15px; border-radius: 20px; font-size: 12px; font-weight: bold; display: inline-block; margin-bottom: 20px; border: 1px solid rgba(212, 175, 55, 0.3); }
-        h1 { font-size: 3.5rem; margin: 0; line-height: 1.1; }
-        .desc { color: #999; font-size: 1.1rem; margin: 25px 0; max-width: 500px; }
+        /* THE LION LOGO POSITION */
+        .main-logo-img { 
+            position: absolute; 
+            width: 380px; 
+            bottom: -50px; 
+            right: 35%; 
+            z-index: 1; 
+            opacity: 0.9;
+            filter: drop-shadow(0 0 20px rgba(0,0,0,1));
+        }
 
-        label { display: block; color: var(--gold); font-size: 10px; font-weight: bold; text-transform: uppercase; margin-bottom: 5px; letter-spacing: 1px; }
-        input, select { width: 100%; padding: 14px; background: #000; border: 1px solid #333; color: white; border-radius: 10px; margin-bottom: 15px; box-sizing: border-box; outline: none; }
-        .btn-gold { background: var(--gold); color: black; width: 100%; padding: 16px; border: none; border-radius: 10px; font-weight: 800; cursor: pointer; text-transform: uppercase; font-size: 16px; }
+        label { display: block; color: var(--gold); font-size: 10px; font-weight: bold; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 1px; }
+        input, select { width: 100%; padding: 15px; background: #000; border: 1px solid #333; color: white; border-radius: 10px; margin-bottom: 15px; box-sizing: border-box; }
+        .btn-gold { background: var(--gold); color: black; width: 100%; padding: 18px; border: none; border-radius: 10px; font-weight: 900; cursor: pointer; text-transform: uppercase; font-size: 15px; }
 
-        /* Pricing Card Glows */
-        .pricing-grid { display: flex; gap: 20px; padding: 40px 5%; flex-wrap: wrap; }
-        .price-card { flex: 1; background: var(--card-bg); padding: 30px; border-radius: 20px; border: 1px solid #222; min-width: 280px; transition: 0.4s; }
-        .price-card:hover { transform: translateY(-10px); border-color: var(--gold); box-shadow: 0 10px 30px var(--glow); }
-        .price-card h3 { color: var(--gold); margin: 0; font-size: 14px; text-transform: uppercase; }
-        .price-card .cost { font-size: 36px; font-weight: 800; margin: 10px 0; }
-        .new-slogan { color: var(--gold); font-style: italic; font-weight: 500; font-size: 1.1rem; margin-bottom: 20px; }
+        .pricing-section { padding: 80px 8%; text-align: center; border-top: 1px solid #222; }
+        .pricing-grid { display: flex; gap: 20px; flex-wrap: wrap; margin-top: 40px; }
+        .price-card { flex: 1; background: #111; padding: 40px 30px; border-radius: 20px; border: 1px solid #222; min-width: 250px; transition: 0.4s; }
+        .price-card:hover { transform: translateY(-10px); border-color: var(--gold); box-shadow: 0 10px 40px var(--glow); }
+        .price-card h3 { color: var(--gold); margin: 0; font-size: 14px; text-transform: uppercase; letter-spacing: 1px; }
+        .price-card .cost { font-size: 40px; font-weight: 800; margin: 15px 0; }
+        .slogan-footer { color: var(--gold); font-weight: 600; font-size: 1.4rem; margin-bottom: 10px; }
     </style>
 </head>
 <body>
 
-    <div class="brand-header">
-        <div class="logo-circle">
-            <img src="logo.png" alt=""> 
-        </div>
-        <div class="brand-name"></div>
-    </div>
-
     <nav>
-        <div></div> 
-        <a href="#pricing" class="pricing-btn">View Pricing</a>
+        <div class="logo-top-left">
+            </div>
+        <a href="#pricing" class="pricing-link">Pricing</a>
     </nav>
 
     <section class="hero">
         <div class="hero-left">
-            <div class="slogan-badge">Hype Sells. Truth Pays.</div>
+            <div class="badge">Hype Sells. Truth Pays.</div>
             <h1>Verify with <br><span style="color:var(--gold)">Confidence.</span></h1>
-            <p class="desc">Stop losing money to the math you didn't see. Paste a listing link to get a free verdict instantly.</p>
-            <button style="background:transparent; color:white; border:1px solid #444; padding:12px 25px; border-radius:8px; font-weight:bold; cursor:pointer;">How it works</button>
+            <p class="desc">Garnett Work helps you stop guessing. Paste a listing link and your buy price to get a free Pass/Fail teaser instantly.</p>
+            <div style="display:flex; gap:15px;">
+                <button class="btn-gold" style="width:auto; padding: 14px 30px;">Run Free Teaser</button>
+                <button style="background:transparent; color:white; border:1px solid #333; padding:14px 30px; border-radius:10px; font-weight:bold; cursor:pointer;">How it works</button>
+            </div>
         </div>
+
+        <img src="logo.png" class="main-logo-img" alt="Garnett Logo">
 
         <div class="hero-right">
             <h2 style="margin-top:0;">Run Garnett</h2>
+            <p style="color:#666; font-size:12px; margin-bottom:25px;">Paste a listing URL + deal details for a free verdict.</p>
             <label>Listing URL</label>
-            <input type="text" placeholder="eBay, FB Marketplace, etc.">
+            <input type="text" placeholder="https://...">
             <div style="display:flex; gap:15px;">
                 <div style="flex:1;"><label>Buy Price</label><input type="number" placeholder="$"></div>
                 <div style="flex:1;"><label>Condition</label><select><option>Used</option><option>New</option></select></div>
             </div>
-            <button class="btn-gold">Get Teaser Verdict (Free)</button>
+            <button class="btn-gold" style="background:#E2B04A;">Get Teaser Verdict (Free)</button>
         </div>
     </section>
 
-    <div style="padding: 0 5%;" id="pricing">
-        <h2>Pricing</h2>
-        <p class="new-slogan">Hype sees the price. Garnett sees the profit.</p>
+    <div class="pricing-section" id="pricing">
+        <p class="slogan-footer">Hype sees the price. Garnett sees the profit.</p>
+        <h2 style="margin:0; font-size: 2rem;">Simple Pricing.</h2>
+        
+        <div class="pricing-grid">
+            <div class="price-card">
+                <h3>Teaser</h3>
+                <div class="cost">FREE</div>
+                <p style="color:#666;">Unlimited basic verdicts.</p>
+            </div>
+            <div class="price-card" style="border: 1px solid var(--gold);">
+                <h3>Single</h3>
+                <div class="cost">$0.25</div>
+                <p style="color:#666;">Full Truth Packet unlock.</p>
+            </div>
+            <div class="price-card">
+                <h3>Starter</h3>
+                <div class="cost">$10/mo</div>
+                <p style="color:#666;">50 Unlocks + History.</p>
+            </div>
+        </div>
     </div>
 
-    <section class="pricing-grid">
-        <div class="price-card">
-            <h3>Teaser</h3>
-            <div class="cost">FREE</div>
-            <p style="color:#777;">Unlimited basic verdicts.</p>
-        </div>
-        <div class="price-card" style="border: 1px solid var(--gold);">
-            <h3>Single</h3>
-            <div class="cost">$0.25</div>
-            <p style="color:#777;">Full Truth Packet unlock.</p>
-        </div>
-        <div class="price-card">
-            <h3>Starter</h3>
-            <div class="cost">$10/mo</div>
-            <p style="color:#777;">50 Unlocks + History.</p>
-        </div>
-    </section>
+    <footer style="padding: 60px; text-align: center; border-top: 1px solid #111; color: #222; font-weight: bold; font-size: 12px; letter-spacing: 2px;">
+        © 2026 GARNETT WORK | TRUTH DECIDES.
+    </footer>
 
 </body>
 </html>
