--- a/index.html
+++ b/index.html
@@ -1,113 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garnett Work | Verify with Confidence</title>
-    <style>
-        :root { --gold: #E2B04A; --black: #0A0A0A; --white: #FFFFFF; --card-bg: #141414; }
-        body { background: var(--black); color: var(--white); font-family: -apple-system, sans-serif; margin: 0; padding: 0; overflow-x: hidden; }
-        
-        /* This locks everything into a neat 1100px block in the middle of your screen */
-        .page-container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Garnett Work — The Market Oracle</title>
 
-        nav { padding: 30px 0; display: flex; justify-content: flex-end; }
-        .pricing-btn { border: 1px solid var(--gold); color: var(--gold); padding: 8px 20px; border-radius: 8px; text-decoration: none; font-weight: bold; font-size: 13px; }
+<style>
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  background: radial-gradient(circle at top left, #1a1a1a, #000000 60%);
+  color: white;
+}
 
-        /* THE HERO SECTION */
-        .hero { 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; /* Forces the group to the middle */
-            gap: 40px; 
-            padding: 80px 0;
-            position: relative;
-        }
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 60px 20px;
+}
 
-        .hero-content { flex: 1; max-width: 480px; position: relative; z-index: 2; }
-        .badge { color: var(--gold); border: 1px solid #333; padding: 5px 12px; border-radius: 20px; font-size: 10px; font-weight: 800; text-transform: uppercase; margin-bottom: 20px; display: inline-block; }
-        h1 { font-size: 4rem; margin: 0; line-height: 0.95; font-weight: 800; letter-spacing: -2px; }
-        h1 span { color: var(--gold); }
-        .desc { color: #888; margin: 25px 0; font-size: 1rem; line-height: 1.5; }
+.hero {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
 
-        /* THE LION LOGO - NAILED IN PLACE */
-        .lion-anchor {
-            position: absolute;
-            left: 50%;
-            top: 55%;
-            transform: translate(-55%, -50%); /* Precisely shifts it into the 'pocket' */
-            width: 380px;
-            z-index: 1;
-            pointer-events: none;
-            opacity: 0.85;
-        }
-        .lion-anchor img { width: 100%; height: auto; }
+.left {
+  max-width: 520px;
+}
 
-        /* THE INPUT BOX */
-        .run-box { 
-            flex: 0 0 380px; 
-            background: #181818; 
-            padding: 40px; 
-            border-radius: 28px; 
-            border: 1px solid #333; 
-            box-shadow: 0 40px 80px rgba(0,0,0,0.9); 
-            z-index: 2; 
-        }
+h1 {
+  font-size: 48px;
+  margin-bottom: 20px;
+}
 
-        label { display: block; color: var(--gold); font-size: 10px; font-weight: bold; text-transform: uppercase; margin-bottom: 8px; }
-        input, select { width: 100%; padding: 14px; background: #000; border: 1px solid #333; color: white; border-radius: 10px; margin-bottom: 15px; box-sizing: border-box; }
-        .btn-gold { background: var(--gold); color: black; width: 100%; padding: 16px; border: none; border-radius: 10px; font-weight: 900; cursor: pointer; text-transform: uppercase; width: 100%; }
+p {
+  color: #ccc;
+  font-size: 18px;
+}
 
-        /* PRICING */
-        .pricing-area { padding: 100px 0; text-align: center; }
-        .pricing-grid { display: flex; gap: 20px; margin-top: 50px; justify-content: center; }
-        .price-card { flex: 1; max-width: 350px; background: #111; padding: 40px; border-radius: 20px; border: 1px solid #222; }
-    </style>
+.gold {
+  background: linear-gradient(90deg, #d4af37, #ffdd66);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.form-card {
+  background: rgba(255,255,255,0.05);
+  padding: 30px;
+  border-radius: 14px;
+  width: 360px;
+  box-shadow: 0 0 40px rgba(212,175,55,0.15);
+}
+
+input, select {
+  width: 100%;
+  padding: 14px;
+  margin-bottom: 14px;
+  border-radius: 8px;
+  border: none;
+  background: #111;
+  color: white;
+  font-size: 16px;
+}
+
+button {
+  width: 100%;
+  padding: 16px;
+  border-radius: 8px;
+  border: none;
+  font-weight: bold;
+  font-size: 16px;
+  background: linear-gradient(90deg, #d4af37, #ffdd66);
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+button:hover {
+  box-shadow: 0 0 18px rgba(255,215,0,0.7);
+}
+
+button:active {
+  transform: scale(0.97);
+  box-shadow: 0 0 28px rgba(255,215,0,1);
+}
+
+.pricing {
+  margin-top: 80px;
+}
+
+.pricing h2 {
+  margin-bottom: 20px;
+}
+
+.pricing-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  background: rgba(255,255,255,0.04);
+  padding: 24px;
+  border-radius: 12px;
+  flex: 1;
+  min-width: 240px;
+}
+
+.card h3 {
+  margin-bottom: 10px;
+}
+
+.footer {
+  margin-top: 60px;
+  font-size: 14px;
+  color: #777;
+  text-align: center;
+}
+</style>
 </head>
+
 <body>
 
-    <div class="page-container">
-        <nav>
-            <a href="#pricing" class="pricing-btn">Pricing</a>
-        </nav>
+<div class="container">
 
-        <section class="hero">
-            <div class="hero-content">
-                <div class="badge">Hype Sells. Truth Pays.</div>
-                <h1>Verify with <br><span>Confidence.</span></h1>
-                <p class="desc">Garnett Work helps you stop guessing. Paste a listing link for a free Pass/Fail teaser instantly.</p>
-                <div style="display:flex; gap:10px;">
-                    <button class="btn-gold" style="width:auto; padding: 14px 30px;">Run Free Teaser</button>
-                    <button style="background:transparent; color:white; border:1px solid #333; padding:14px 30px; border-radius:10px; font-weight:bold;">How it works</button>
-                </div>
-            </div>
+<div class="hero">
 
-            <div class="lion-anchor">
-                <img src="logo.png" alt="Garnett Logo">
-            </div>
+<div class="left">
+<h1>Verify With Confidence.</h1>
+<p>
+Garnett Work analyzes <span class="gold">Facebook Marketplace</span> and <span class="gold">eBay listings</span> using real market data.
+Get a fast PASS/FAIL teaser. Unlock the full Truth Packet when precision matters.
+</p>
+</div>
 
-            <div class="run-box">
-                <h2 style="margin-top:0; font-size: 22px;">Run Garnett</h2>
-                <p style="color:#555; font-size: 12px; margin-bottom: 25px;">Enter details for a free verdict.</p>
-                <label>Listing URL</label>
-                <input type="text" placeholder="https://...">
-                <div style="display:flex; gap:12px;">
-                    <div style="flex:1;"><label>Buy Price</label><input type="number" placeholder="$"></div>
-                    <div style="flex:1;"><label>Condition</label><select><option>Used</option><option>New</option></select></div>
-                </div>
-                <button class="btn-gold">Get Teaser Verdict (Free)</button>
-            </div>
-        </section>
+<div class="form-card">
+<h3>Run Garnett</h3>
 
-        <div class="pricing-area" id="pricing">
-            <p style="color:var(--gold); font-weight:bold; font-size: 1.2rem; margin-bottom: 10px;">Hype sees the price. Garnett sees the profit.</p>
-            <h2 style="font-size: 2.5rem; margin:0;">Simple Pricing.</h2>
-            <div class="pricing-grid">
-                <div class="price-card"><h3>FREE</h3><p>Teaser</p></div>
-                <div class="price-card" style="border-color:var(--gold)"><h3>$0.25</h3><p>Single Unlock</p></div>
-            </div>
-        </div>
-    </div>
+<input type="text" placeholder="Paste Facebook or eBay listing URL">
+
+<input type="number" placeholder="Buy Price ($)">
+
+<select>
+<option>Used</option>
+<option>New</option>
+<option>Open Box</option>
+</select>
+
+<button>Get Teaser Verdict (Free)</button>
+
+</div>
+</div>
+
+<div class="pricing">
+<h2>Pricing</h2>
+
+<p>
+Truth is free to preview. Detailed market verification is unlocked when needed.
+</p>
+
+<div class="pricing-grid">
+
+<div class="card">
+<h3>Free Teaser</h3>
+<p><strong>FREE</strong></p>
+<p>Instant PASS/FAIL + headline market number.</p>
+</div>
+
+<div class="card">
+<h3>Single Unlock</h3>
+<p><strong>$0.25</strong></p>
+<p>Full Truth Packet: comps, fee math, rules fired, and receipt.</p>
+</div>
+
+<div class="card">
+<h3>Starter</h3>
+<p><strong>$10 / mo</strong></p>
+<p>50 unlocks included. Scalable for active flippers.</p>
+</div>
+
+</div>
+</div>
+
+<div class="footer">
+Garnett Work © 2026 — The Market Oracle  
+<br>
+Payment never changes truth.
+</div>
+
+</div>
 
 </body>
 </html>
