--- a/index.html
+++ b/index.html
@@ -6,103 +6,137 @@
 <title>Garnett Work — The Market Oracle</title>
 
 <style>
+:root {
+  --gold: #FFD700;
+  --gold-dim: #CAA74E;
+  --black: #0A0A0A;
+  --card-bg: #111111;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-  background: radial-gradient(circle at top, #1a1a1a 0%, #000000 60%);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  background: radial-gradient(circle at top, #1a1a1a 0%, #000000 70%);
   color: white;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
 .container {
   max-width: 1100px;
   margin: auto;
-  padding: 40px 20px;
+  padding: 20px 20px 80px 20px;
 }
 
+/* HERO SECTION */
 .hero { text-align: center; }
 
 .logo {
-  width: 600px; /* Adjusted for better vertical flow */
-  max-width: 90%;
-  margin: 0 auto 20px auto;
+  width: 840px; /* Big Logo request */
+  max-width: 100%;
+  margin: 0 auto 10px auto; /* Tighter margin for the big logo */
   display: block;
-  filter: drop-shadow(0 0 25px rgba(255, 215, 0, 0.4));
-  transition: transform 0.3s ease;
+  filter: drop-shadow(0 0 40px rgba(255, 215, 0, 0.2));
+  transition: transform 0.4s ease;
 }
 
-h1 { font-size: 48px; margin-bottom: 15px; letter-spacing: -1px; }
+h1 { 
+  font-size: 52px; 
+  margin: 0 0 10px 0; 
+  letter-spacing: -2px; 
+  font-weight: 800;
+}
 
 .sub {
   font-size: 18px;
-  color: #cfcfcf;
+  color: #888;
   margin-bottom: 40px;
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
+  line-height: 1.4;
 }
 
+/* FORM CARD */
 .form-card {
-  background: #111;
+  background: var(--card-bg);
   padding: 30px;
-  border-radius: 16px;
+  border-radius: 20px;
   max-width: 400px;
-  margin: 0 auto 60px auto;
-  box-shadow: 0 0 40px rgba(255, 215, 0, 0.1);
+  margin: 0 auto 80px auto;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.6);
   border: 1px solid #222;
 }
 
 input, select {
   width: 100%;
   padding: 14px;
-  margin-bottom: 15px;
-  border-radius: 8px;
+  margin-bottom: 12px;
+  border-radius: 10px;
   border: 1px solid #333;
-  background: #1a1a1a;
+  background: #000;
   color: white;
   box-sizing: border-box;
+  font-size: 15px;
 }
 
 .gold-btn {
   width: 100%;
   padding: 16px;
   border: none;
-  border-radius: 8px;
-  font-weight: bold;
-  background: linear-gradient(90deg, #caa74e, #ffd700);
+  border-radius: 10px;
+  font-weight: 800;
+  background: linear-gradient(135deg, var(--gold-dim), var(--gold));
   color: black;
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 1px;
+  transition: 0.2s;
 }
 
-/* VERDICT POP-UP STYLES */
+.gold-btn:hover {
+  transform: scale(1.02);
+  box-shadow: 0 0 20px rgba(255, 215, 0, 0.4);
+}
+
+/* VERDICT MODAL */
 #verdict-modal {
-  display: none; /* Hidden by default */
+  display: none;
   position: fixed;
   top: 0; left: 0; width: 100%; height: 100%;
-  background: rgba(0,0,0,0.9);
-  z-index: 1000;
+  background: rgba(0,0,0,0.94);
+  z-index: 9999;
   align-items: center;
   justify-content: center;
 }
 
 .modal-content {
-  background: #111;
+  background: #0F0F0F;
   padding: 40px;
   border-radius: 24px;
-  border: 2px solid #ffd700;
+  border: 2px solid var(--gold);
   text-align: center;
-  max-width: 400px;
-  box-shadow: 0 0 50px rgba(255, 215, 0, 0.2);
+  max-width: 380px;
+  box-shadow: 0 0 50px rgba(255, 215, 0, 0.15);
 }
 
-.pricing { text-align: center; margin-top: 40px; }
+.signal-strength {
+  background: #1a1a1a;
+  padding: 12px;
+  border-radius: 10px;
+  margin: 20px 0;
+  color: var(--gold);
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+/* PRICING */
+.pricing { text-align: center; border-top: 1px solid #111; padding-top: 60px; }
 .cards { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
-.card { background: #111; padding: 30px; border-radius: 14px; width: 260px; border: 1px solid #222; transition: 0.3s; }
-.card:hover { border-color: #ffd700; transform: translateY(-5px); }
-.price { font-size: 24px; color: #ffd700; margin-bottom: 10px; font-weight: bold; }
-.footer { margin-top: 80px; text-align: center; color: #555; font-size: 14px; padding-bottom: 40px;}
+.card { background: var(--card-bg); padding: 30px; border-radius: 16px; width: 260px; border: 1px solid #222; }
+.price-val { font-size: 32px; color: var(--gold); margin: 10px 0; font-weight: 800; }
+
+.footer { margin-top: 80px; text-align: center; color: #333; font-size: 12px; letter-spacing: 1px; }
 </style>
 </head>
 
@@ -110,11 +144,9 @@ input, select {
 
 <div id="verdict-modal">
     <div class="modal-content">
-        <h2 style="color:#ffd700; font-size: 32px; margin-top:0;">VERDICT: PASS</h2>
-        <p style="color:#ccc; line-height:1.6;">The market data confirms this is a high-probability flip. Basic comps show a 15% margin minimum.</p>
-        <div style="background:#222; padding:15px; border-radius:10px; margin: 20px 0;">
-            <span style="color:#ffd700; font-weight:bold;">Signal Strength: High</span>
-        </div>
+        <h2 style="color:var(--gold); font-size: 32px; margin: 0 0 15px 0;">VERDICT: PASS</h2>
+        <p style="color:#bbb; line-height: 1.5;">The market data confirms this is a high-probability flip. Basic comps show a 15% margin minimum.</p>
+        <div class="signal-strength">Signal Strength: High</div>
         <button class="gold-btn" onclick="closeModal()">Close Verdict</button>
     </div>
 </div>
@@ -122,15 +154,14 @@ input, select {
 <div class="container">
   <div class="hero">
     <img src="logo.png" class="logo" alt="Garnett Work Logo" />
-    <h1>Verify With Confidence.</h1>
-    <div class="sub">
-      Garnett Work analyzes <span style="color:#ffd700;">Facebook Marketplace</span> and 
-      <span style="color:#ffd700;">eBay listings</span> using real market data. 
-      Get a fast PASS/FAIL teaser instantly.
-    </div>
+    <h1>Verify with Confidence.</h1>
+    <p class="sub">
+      Garnett Work analyzes <span style="color:var(--gold);">Facebook Marketplace</span> and 
+      <span style="color:var(--gold);">eBay listings</span> using real market data.
+    </p>
 
     <div class="form-card">
-      <input type="text" id="urlInput" placeholder="Paste Facebook or eBay listing URL" />
+      <input type="text" id="urlInput" placeholder="Paste listing URL (eBay/FB)" />
       <input type="number" placeholder="Buy Price ($)" />
       <select>
         <option>Used</option>
@@ -141,38 +172,34 @@ input, select {
   </div>
 
   <div class="pricing">
-    <h2>Pricing</h2>
-    <div class="sub">Preview the signal. Unlock the proof.</div>
+    <h2 style="margin:0;">Simple Pricing.</h2>
     <div class="cards">
         <div class="card">
-          <h3>Free Teaser</h3>
-          <div class="price">FREE</div>
-          Instant PASS/FAIL + headline market number.
+          <h3 style="margin:0; color:#555; font-size: 13px; text-transform: uppercase;">Teaser</h3>
+          <div class="price-val">FREE</div>
+          <p style="color:#777; font-size: 13px;">Instant PASS/FAIL teaser.</p>
         </div>
-        <div class="card" style="border-color: #ffd700;">
-          <h3>Single Unlock</h3>
-          <div class="price">$0.25</div>
-          Full Truth Packet: comps, fee math, and receipt.
+        <div class="card" style="border-color: #444;">
+          <h3 style="margin:0; color:#555; font-size: 13px; text-transform: uppercase;">Single</h3>
+          <div class="price-val">$0.25</div>
+          <p style="color:#777; font-size: 13px;">One full Truth Packet.</p>
         </div>
         <div class="card">
-          <h3>Starter</h3>
-          <div class="price">$10 / mo</div>
-          50 unlocks included. Scalable for active flippers.
+          <h3 style="margin:0; color:#555; font-size: 13px; text-transform: uppercase;">Starter</h3>
+          <div class="price-val">$10/mo</div>
+          <p style="color:#777; font-size: 13px;">50 unlocks included.</p>
         </div>
     </div>
   </div>
 
-  <div class="footer">
-    Garnett Work © 2026 — The Market Oracle <br />
-    Payment never changes truth.
-  </div>
+  <div class="footer">GARNETT WORK © 2026 — TRUTH OVER HYPE.</div>
 </div>
 
 <script>
     function showVerdict() {
         const url = document.getElementById('urlInput').value;
-        if(url === "") {
-            alert("Please paste a listing URL first.");
+        if(url.trim() === "") {
+            alert("Please paste a listing URL first!");
         } else {
             document.getElementById('verdict-modal').style.display = 'flex';
         }
