--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
 .hero { text-align: center; }
 
 .logo {
-  width: 940px; 
+  width: 840px; 
   max-width: 100%;
   margin: 0 auto 10px auto;
   display: block;
@@ -56,12 +56,12 @@ h1 {
   line-height: 1.4;
 }
 
-/* FORM CARD */
+/* FORM CARD MATCHING YOUR SCREENSHOT */
 .form-card {
   background: var(--card-bg);
   padding: 30px;
   border-radius: 20px;
-  max-width: 420px;
+  max-width: 440px;
   margin: 0 auto 80px auto;
   box-shadow: 0 20px 50px rgba(0,0,0,0.6);
   border: 1px solid #222;
@@ -70,49 +70,50 @@ h1 {
 
 label {
     color: var(--gold);
-    font-size: 10px;
-    font-weight: 800;
+    font-size: 11px;
+    font-weight: 900;
     text-transform: uppercase;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
     letter-spacing: 1px;
 }
 
 input, select {
   width: 100%;
-  padding: 14px;
-  margin-bottom: 15px;
-  border-radius: 10px;
+  padding: 16px;
+  margin-bottom: 20px;
+  border-radius: 12px;
   border: 1px solid #333;
   background: #000;
   color: white;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 .gold-btn {
   width: 100%;
-  padding: 18px;
+  padding: 20px;
   border: none;
-  border-radius: 12px;
-  font-weight: 800;
-  background: linear-gradient(135deg, var(--gold-dim), var(--gold));
+  border-radius: 15px;
+  font-weight: 900;
+  background: linear-gradient(180deg, #F5D142 0%, #D4AF37 100%);
   color: black;
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 1px;
-  margin-top: 10px;
+  font-size: 16px;
 }
 
-/* VERDICT MODAL */
+/* MODAL MATCHING SCREENSHOT 8 EXACTLY */
 #verdict-modal {
   display: none;
   position: fixed;
   top: 0; left: 0; width: 100%; height: 100%;
-  background: rgba(0,0,0,0.9);
+  background: rgba(0,0,0,0.92);
   z-index: 9999;
   align-items: center;
   justify-content: center;
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(10px);
 }
 
 .modal-content {
@@ -125,15 +126,26 @@ input, select {
   width: 90%;
 }
 
-.modal-content h2 { font-size: 42px; font-weight: 900; margin: 0 0 20px 0; text-transform: uppercase; }
-.modal-content p { color: #E0E0E0; font-size: 17px; line-height: 1.6; margin-bottom: 30px; }
+.modal-content h2 { 
+    font-size: 42px; 
+    font-weight: 900; 
+    margin: 0 0 20px 0; 
+    text-transform: uppercase;
+}
+
+.modal-content p { 
+    color: #E0E0E0; 
+    font-size: 17px; 
+    line-height: 1.6; 
+    margin-bottom: 30px;
+}
 
 .signal-pill {
   background: #1A1A1A;
   padding: 20px;
   border-radius: 18px;
   margin-bottom: 15px;
-  font-weight: 700;
+  font-weight: 800;
   font-size: 18px;
   border: 1px solid #222;
 }
@@ -157,9 +169,9 @@ input, select {
 
 <div id="verdict-modal">
     <div class="modal-content" id="modal-box">
-        <h2 id="verdict-title">VERDICT: --</h2>
-        <p id="verdict-desc">Analyzing...</p>
-        <div class="signal-pill" id="signal-text">Signal Strength: --</div>
+        <h2 id="verdict-title">VERDICT: PASS</h2>
+        <p id="verdict-desc"></p>
+        <div class="signal-pill" id="signal-text">Signal Strength: High</div>
         <button class="close-btn" onclick="closeModal()">Close Verdict</button>
     </div>
 </div>
@@ -184,11 +196,11 @@ input, select {
       <div style="display:flex; gap:12px;">
         <div style="flex:1;">
             <label>Buy Price ($)</label>
-            <input type="number" id="buyPrice" placeholder="50">
+            <input type="number" id="buyPrice" placeholder="0">
         </div>
         <div style="flex:1;">
             <label>Est. Sale ($)</label>
-            <input type="number" id="marketValue" placeholder="120">
+            <input type="number" id="marketValue" placeholder="0">
         </div>
       </div>
 
@@ -210,54 +222,44 @@ input, select {
     }
 
     function runTruthMath() {
-        const buy = parseFloat(document.getElementById('buyPrice').value);
-        const sell = parseFloat(document.getElementById('marketValue').value);
+        const buy = parseFloat(document.getElementById('buyPrice').value) || 0;
+        const sell = parseFloat(document.getElementById('marketValue').value) || 0;
         const ship = parseFloat(document.getElementById('shippingCost').value) || 0;
         const platform = document.getElementById('platform').value;
-        const url = document.getElementById('urlInput').value;
 
-        if(!url || isNaN(buy) || isNaN(sell)) {
-            alert("Please fill in the URL, Buy Price, and Sale Price.");
-            return;
-        }
+        let feePercent = 0;
+        if (platform === 'ebay') feePercent = 0.135;
+        if (platform === 'fb_shipped') feePercent = 0.10;
 
-        let fees = 0;
-        let finalProfit = 0;
+        const platformFees = (platform === 'fb_shipped') ? (sell + ship) * feePercent : (sell * feePercent);
+        const actualShip = (platform === 'fb_local') ? 0 : ship;
+        const netProfit = sell - platformFees - actualShip - buy;
+        const margin = (netProfit / sell) * 100;
 
-        if (platform === 'ebay') {
-            fees = (sell * 0.135) + 0.30; 
-            finalProfit = sell - fees - ship - buy;
-        } else if (platform === 'fb_shipped') {
-            fees = (sell + ship) * 0.10; 
-            finalProfit = sell - fees - ship - buy;
-        } else {
-            fees = 0;
-            finalProfit = sell - buy;
-        }
-
-        const margin = (finalProfit / sell) * 100;
         const title = document.getElementById('verdict-title');
         const desc = document.getElementById('verdict-desc');
         const signal = document.getElementById('signal-text');
         const modalBox = document.getElementById('modal-box');
 
-        document.getElementById('verdict-modal').style.display = 'flex';
-
-        if (margin >= 20) {
+        if (netProfit > 0 && margin >= 15) {
             title.innerHTML = "VERDICT: PASS";
             title.style.color = "var(--gold)";
             modalBox.style.borderColor = "var(--gold)";
-            desc.innerHTML = `This deal is solid. After ${platform.replace('_', ' ')} fees ($${fees.toFixed(2)}) and shipping, you clear <b>$${finalProfit.toFixed(2)}</b> (${margin.toFixed(1)}% margin).`;
+            desc.innerHTML = `This is a high-probability flip. After <b>$${platformFees.toFixed(2)}</b> in fees and shipping, your net profit is <b>$${netProfit.toFixed(2)}</b>.`;
             signal.innerHTML = "Signal Strength: High";
             signal.style.color = "var(--gold)";
         } else {
             title.innerHTML = "VERDICT: FAIL";
             title.style.color = "var(--red)";
             modalBox.style.borderColor = "var(--red)";
-            desc.innerHTML = `Hidden costs kill this deal. After fees and shipping, your profit drops to <b>$${finalProfit.toFixed(2)}</b> (${margin.toFixed(1)}% margin).`;
+            desc.innerHTML = netProfit < 0 
+                ? `You will lose <b>$${Math.abs(netProfit).toFixed(2)}</b> on this deal after fees.` 
+                : `Margin is too thin (${margin.toFixed(1)}%). After fees, you only clear <b>$${netProfit.toFixed(2)}</b>.`;
             signal.innerHTML = "Signal Strength: Weak";
             signal.style.color = "var(--red)";
         }
+
+        document.getElementById('verdict-modal').style.display = 'flex';
     }
 
     function closeModal() {
