--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
       font-size: 12.5px;
     }
 
-    /* ===== LOGO: Bigger, to the right, lower, centered-ish in the hero ===== */
+    /* ===== LOGO (UPDATED): bigger, more right, and moved UP ===== */
     .brandLogo{
       position:absolute;
-      right: -60px;          /* further right */
-      top: 210px;            /* lower */
-      width: 520px;          /* your request */
+      right: -110px;         /* more to the right */
+      top: 165px;            /* moved up */
+      width: 520px;          /* your width */
       max-width: 70%;
       opacity: 0.98;
       filter: drop-shadow(0 0 34px rgba(255,215,0,0.24));
@@ -199,7 +199,7 @@
 
     /* Scale down on smaller laptops */
     @media (max-width: 1200px){
-      .brandLogo{ width: 420px; right: -35px; top: 220px; }
+      .brandLogo{ width: 420px; right: -55px; top: 175px; }
     }
 
     /* Mobile: place logo nicely in-flow */
