--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
       font-size: 12.5px;
     }
 
-    /* ===== LOGO (UPDATED): bigger, more right, and moved UP ===== */
+    /* ===== LOGO (UPDATED): moved MORE RIGHT ===== */
     .brandLogo{
       position:absolute;
-      right: -110px;         /* more to the right */
-      top: 165px;            /* moved up */
-      width: 520px;          /* your width */
+      right: -155px;         /* pushed right more */
+      top: 165px;            /* good height */
+      width: 520px;          /* fixed width */
       max-width: 70%;
       opacity: 0.98;
       filter: drop-shadow(0 0 34px rgba(255,215,0,0.24));
@@ -199,7 +199,7 @@
 
     /* Scale down on smaller laptops */
     @media (max-width: 1200px){
-      .brandLogo{ width: 420px; right: -55px; top: 175px; }
+      .brandLogo{ width: 420px; right: -70px; top: 175px; }
     }
 
     /* Mobile: place logo nicely in-flow */
@@ -460,7 +460,11 @@
 
     <section class="pricingWrap" id="pricing">
       <div class="pricingTitle">Pricing</div>
-      <div class="pricingSub">Keep it low, gain customers first. Teaser is free. Unlock only when it matters.</div>
+
+      <!-- UPDATED: solution-focused pricing line -->
+      <div class="pricingSub">
+        Stop guessing. Verify the real market price before you buy — so you don’t get stuck holding a loss.
+      </div>
 
       <div class="pricingFYI">
         <strong>FYI:</strong> <span class="gold">Teaser</span> = signal. <span class="gold">Unlock</span> = proof.
