--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
       font-size: 12.5px;
     }
 
-    /* ===== LOGO (UPDATED): moved MORE RIGHT ===== */
+    /* ===== LOGO (UPDATED AGAIN): move a bit MORE RIGHT ===== */
     .brandLogo{
       position:absolute;
-      right: -155px;         /* pushed right more */
-      top: 165px;            /* good height */
-      width: 520px;          /* fixed width */
+      right: -185px;        /* was -155px → more right */
+      top: 165px;
+      width: 520px;
       max-width: 70%;
       opacity: 0.98;
       filter: drop-shadow(0 0 34px rgba(255,215,0,0.24));
@@ -199,7 +199,7 @@
 
     /* Scale down on smaller laptops */
     @media (max-width: 1200px){
-      .brandLogo{ width: 420px; right: -70px; top: 175px; }
+      .brandLogo{ width: 420px; right: -90px; top: 175px; }
     }
 
     /* Mobile: place logo nicely in-flow */
@@ -461,7 +461,6 @@
     <section class="pricingWrap" id="pricing">
       <div class="pricingTitle">Pricing</div>
 
-      <!-- UPDATED: solution-focused pricing line -->
       <div class="pricingSub">
         Stop guessing. Verify the real market price before you buy — so you don’t get stuck holding a loss.
       </div>
